--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -110,11 +110,26 @@
         </div>
 
         <div class="row">
-
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                Front text
+                <div class="card__picture card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    The Sea Explorer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
                 Back text
@@ -125,17 +140,38 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                Front text
+                <div class="card__picture card__picture--2">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    The Forest Hiker
+                  </span>
+                </h4>
+                <div class="card__details">
+                  Details
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
                 Back text
               </div>
             </div>
           </div>
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                Front text
+                <div class="card__picture card__picture--3">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    The Snow Adventurer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  Details
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
                 Back text
