--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -132,7 +132,13 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                Back text
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$297</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -149,11 +155,23 @@
                   </span>
                 </h4>
                 <div class="card__details">
-                  Details
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
-                Back text
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$497</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -170,15 +188,32 @@
                   </span>
                 </h4>
                 <div class="card__details">
-                  Details
+                  <ul>
+                    <li>5 day tours</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
-                Back text
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+
       </section>
     </main>
     <!-- <section>
